<resources>
    <string name="app_name">AppBDLibros</string>
    <string name="titulo">Biblioteca de Alejandría</string>
    <string name="autor">Alberto Colmenar</string>
    <string name="pulsePortada">Pulse en pantalla para entrar a la biblioteca</string>

    <string name="botonConsultar">Consultar</string>
    <string name="botonInsertar">Añadir Libro</string>
    <string name="botonBorrar">Borrar</string>
    <string name="botonListado">Listado</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="botonGuardar">Guardar</string>

    <string name="textoCodigo">Código</string>
    <string name="textoTitulo">Título</string>
    <string name="textoAutor">Autor</string>
    <string name="textoSinopsis">Sinopsis</string>

    <string name="botonAtras">Atrás</string>
    <string name="botonModificar">Modificar</string>


</resources>