<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primario"
        android:onClick="insertarLibro"
        android:text="@string/botonInsertar"
        android:textSize="@dimen/textoMedio"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/botonListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primario"
        android:onClick="consultarLibros"
        android:text="@string/botonListado"
        android:textSize="@dimen/textoMedio"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/cajaAutor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/textoMedio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/textoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoTitulo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/cajaCodigo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="@dimen/textoMedio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:id="@+id/textoCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/textoCodigo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cajaCodigo"
        app:layout_constraintEnd_toStartOf="@+id/cajaCodigo"
        app:layout_constraintTop_toTopOf="@+id/cajaCodigo"
        app:layout_constraintVertical_bias="0.652" />

    <TextView
        android:id="@+id/textoAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoAutor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/cajaTitulo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/textoMedio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/botonConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primario"
        android:onClick="consultarLibro"
        android:text="@string/botonConsultar"
        android:textSize="@dimen/textoMedio"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/primario"
        android:fontFamily="@font/aclonica"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/titulo"
        android:textAlignment="viewEnd"
        android:textColor="@color/blanco"
        android:textSize="@dimen/textoMedio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>