<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <EditText
        android:id="@+id/cajaSinopsis"
        android:layout_width="318dp"
        android:layout_height="145dp"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <EditText
        android:id="@+id/cajaAutor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/textoCodigo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/textoCodigo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cajaCodigo2"
        app:layout_constraintEnd_toStartOf="@+id/cajaCodigo2"
        app:layout_constraintTop_toTopOf="@+id/cajaCodigo2"
        app:layout_constraintVertical_bias="0.611" />

    <EditText
        android:id="@+id/cajaTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/textoAutor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/textoAutor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/cajaAutor2"
        app:layout_constraintEnd_toStartOf="@id/cajaAutor2"
        app:layout_constraintTop_toTopOf="@id/cajaAutor2" />

    <TextView
        android:id="@+id/textoTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/textoTitulo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/cajaTitulo2"
        app:layout_constraintEnd_toStartOf="@id/cajaTitulo2"
        app:layout_constraintTop_toTopOf="@id/cajaTitulo2"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/textoSinopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/textoSinopsis"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cajaSinopsis"
        app:layout_constraintEnd_toEndOf="@+id/cajaSinopsis"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/cajaSinopsis"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primario"
        android:onClick="clickCancelar"
        android:text="@string/botonCancelar"
        android:textSize="@dimen/textoMedio"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primario"
        android:onClick="clickGuardar"
        android:text="@string/botonGuardar"
        android:textSize="@dimen/textoMedio"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <EditText
        android:id="@+id/cajaCodigo2"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/primario"
        android:fontFamily="@font/aclonica"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/titulo"
        android:textAlignment="viewEnd"
        android:textColor="@color/blanco"
        android:textSize="@dimen/textoMedio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>